--- a/Aval2.ipynb
+++ b/Aval2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOU8PFcKcd/JM287N0tWqdG",
+      "authorship_tag": "ABX9TyNAPONnQpet4QrBkWKZhRyA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "IhlqccWOUpFk"
       },
@@ -44,14 +44,14 @@
         "        array[i] = num[i]\n",
         "\n",
         "    return array\n",
-        "    \n",
+        "\n",
         "tax = 1\n",
         "\n",
         "#def gerador:\n",
         "\n",
         "for tax in range(1,11,1):\n",
         "    #tax = tax + 1\n",
-        "    size = 100000    \n",
+        "    size = 100000\n",
         "    strArq = \"arq\"+str(tax)+\".txt\"\n",
         "    #arq1 = open(strArq,\"w+\")\n",
         "    size = size*(tax)\n",
@@ -79,7 +79,7 @@
         "tempo_ord = []\n",
         "for i in range(1,11,1):\n",
         "      strArq = \"arq\"+str(i)+\".txt\"\n",
-        "      \n",
+        "\n",
         "      #print(strArq)\n",
         "      array = np.loadtxt(strArq)\n",
         "      #print(array)\n",
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "OOfzLhAKU6UE"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,7 +138,7 @@
         "id": "AMjpRjFufJAz",
         "outputId": "3b970a08-6db7-4661-cda9-12e14205b7f6"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,7 +194,7 @@
       "metadata": {
         "id": "xniHHh_EU9In"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -236,7 +236,7 @@
       "metadata": {
         "id": "-Q5ILHZTlbGh"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -278,7 +278,7 @@
       "metadata": {
         "id": "0mVD6EKlle5t"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -305,15 +305,15 @@
         "      num_comp = num_comp + 1\n",
         "      if(vet[pos]==chave):\n",
         "        return pos\n",
-        "    \n",
-        "    return -1 \n",
         "\n",
-        "      "
+        "    return -1\n",
+        "\n",
+        ""
       ],
       "metadata": {
         "id": "yaFCsUZksdxd"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -344,7 +344,7 @@
         "      #print(\"tamanho\",len(array))\n",
         "      chave = array[-1]\n",
         "      #print(\"chave = \", chave)\n",
-        "      #taux = \n",
+        "      #taux =\n",
         "      #print()\n",
         "      tempo_piorcaso.append(round(timeit.timeit(lambda: buscaSeq(array,chave), number=1),4))\n",
         "      taux = 0\n",
@@ -363,7 +363,7 @@
         "id": "wr7wcKyysvp4",
         "outputId": "6c89fc81-e160-4a82-f685-46789ea609c4"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -443,7 +443,7 @@
         "      tempo_total = 0.0\n",
         "      Taux = []\n",
         "      nc = []\n",
-        "      \n",
+        "\n",
         "      total_num_comp = 0.0\n",
         "      for j in range(100):\n",
         "          t = round(timeit.timeit(lambda: buscaSeq(array,chave_aleat[j]), number=1),4)\n",
@@ -459,7 +459,7 @@
         "      tempo_casoaleat.append(round((tempo_total/100),2))\n",
         "      num_comp_casos_aleat.append(int(total_num_comp/100))\n",
         "      total_num_comp = 0\n",
-        "      \n",
+        "\n",
         "      #print(\"tempo=\",t)\n",
         "\n",
         "print(\"tempos medios em 100 casos aleatórios=\\n \",tempo_casoaleat)\n",
@@ -475,7 +475,7 @@
         "id": "AsCoHHPSs_fv",
         "outputId": "37907051-6969-414f-ea2e-4649e11c2955"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -561,11 +561,11 @@
         "    n = len(vet)\n",
         "    size = int(math.sqrt(n))\n",
         "    left, right = 0, 0\n",
-        "    \n",
+        "\n",
         "    while right < n and vet[right] < chave:\n",
         "        left = right\n",
         "        right += size\n",
-        "  \n",
+        "\n",
         "    for i in range(left, min(right, n)):\n",
         "        global num_comp\n",
         "        num_comp = num_comp+1\n",
@@ -577,7 +577,7 @@
       "metadata": {
         "id": "fbw2qzO4tGtX"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -611,7 +611,7 @@
         "      #print(\"Número de Comparações =\",num_comp)\n",
         "      num_comp_piorcaso.append(num_comp)\n",
         "      num_comp = 0\n",
-        "      \n",
+        "\n",
         "print(\"tempo pior caso =\\n\", tempo_piorcaso)\n",
         "print(\"Número de Comparações no pior caso =\",num_comp_piorcaso)\n",
         "geradorPiorCaso(tempo_piorcaso,num_comp_piorcaso)"
@@ -623,7 +623,7 @@
         "id": "RTwAJDDctM1H",
         "outputId": "a4c4eb5a-c464-4eb0-c5c5-43d0bcd9021a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -729,7 +729,7 @@
         "id": "LJ_flJzXtQ1g",
         "outputId": "f0121b7b-a89a-4239-a7a9-4dad5016651c"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -832,7 +832,7 @@
       "metadata": {
         "id": "mQ-aZKsVtdsg"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -868,7 +868,7 @@
         "      num_comp = 0\n",
         "      #print(tempo_piorcaso[i-1])\n",
         "      #busca em 100 casos aleatórios\n",
-        "      \n",
+        "\n",
         "      #print(\"tempo=\",t)\n",
         "print(\"tempo pior caso =\\n\", tempo_piorcaso)\n",
         "print(\"Número de Comparações no pior caso =\",num_comp_piorcaso)\n",
@@ -881,7 +881,7 @@
         "id": "kLk5gpKJtjUx",
         "outputId": "61b3e4e9-71c1-473b-9e37-221faead4597"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -970,10 +970,10 @@
         "          t = 0\n",
         "          total_num_comp += num_comp\n",
         "          nc.append(num_comp)\n",
-        "          \n",
+        "\n",
         "          num_comp = 0\n",
         "\n",
-        "          \n",
+        "\n",
         "      tempo_casoaleat.append(round((tempo_total/100),5))\n",
         "      num_comp_casos_aleat.append(int(total_num_comp/100))\n",
         "      desvios_tempo.append(round((statistics.pstdev(Taux)),5))\n",
@@ -993,7 +993,7 @@
         "id": "llDwJUhitpKs",
         "outputId": "e387ffaf-1207-44fa-bc14-ee0b9e74aaad"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1169,7 +1169,7 @@
       "metadata": {
         "id": "Hvd0J3YFVhl2"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1200,13 +1200,13 @@
         "  array = np.loadtxt(strArq)\n",
         "  chave = array[0]\n",
         "  #print(array)\n",
-        "  \n",
+        "\n",
         "  #preencher lista\n",
         "  for j in array:\n",
         "    #lista.insere_no_fim(j)\n",
         "    lista.insere_no_inicio(j)\n",
         "  #chave = lista.primeiro()\n",
-        "  \n",
+        "\n",
         "  #pos = lista.busca(chave)\n",
         "  #print(pos)\n",
         "  tempo_piorcaso.append(round(timeit.timeit(lambda: lista.busca(chave), number=1),4))\n",
@@ -1214,7 +1214,7 @@
         "  #print(\"Número de Comparações =\",num_comp)\n",
         "  num_comp_piorcaso.append(num_comp)\n",
         "  num_comp = 0\n",
-        "  \n",
+        "\n",
         "print(\"tempo pior caso =\\n\", tempo_piorcaso)\n",
         "print(\"Número de Comparações no pior caso =\\n\",num_comp_piorcaso)\n",
         "geradorPiorCaso(tempo_piorcaso,num_comp_piorcaso)"
@@ -1226,7 +1226,7 @@
         "id": "YwvxgLaeX-LI",
         "outputId": "4c94a801-c3d0-4c32-a657-cee8da2ba528"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1308,12 +1308,12 @@
         "      #print(\"Array = \",array)\n",
         "      #print(\"tamanho\",len(array))\n",
         "      t = 0.0\n",
-        "      \n",
+        "\n",
         "      #print(\"chaves aleeatórias = \",chave_aleat)\n",
         "      tempo_total = 0.0\n",
         "      Taux = []\n",
         "      nc = []\n",
-        "      \n",
+        "\n",
         "      total_num_comp = 0.0\n",
         "      for j in range(100):\n",
         "          t = timeit.timeit(lambda: lista.busca(chave_aleat[j]), number=1)\n",
@@ -1329,7 +1329,7 @@
         "      tempo_casoaleat.append(round((tempo_total/100),5))\n",
         "      num_comp_casos_aleat.append(int(total_num_comp/100))\n",
         "      total_num_comp = 0\n",
-        "      \n",
+        "\n",
         "      #print(\"tempo=\",t)\n",
         "\n",
         "print(\"tempos medios em 100 casos aleatórios=\\n \",tempo_casoaleat)\n",
@@ -1345,7 +1345,7 @@
         "id": "0slmB51zyVBk",
         "outputId": "6deb3b93-2c37-40b7-a733-3500a2c6f073"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1435,12 +1435,12 @@
         "    self.root = None\n",
         "  def inserir(self, v):\n",
         "    novo = No(v, None, None)\n",
-        "\t\t\n",
+        "\n",
         "    if self.root == None:\n",
-        "      \n",
-        "      self.root = novo\t\n",
+        "\n",
+        "      self.root = novo\n",
         "    else:\n",
-        "      atual = self.root  \n",
+        "      atual = self.root\n",
         "      while True:\n",
         "        anterior = atual\n",
         "        if v <= atual.dado:  # ir para esquerda\n",
@@ -1448,13 +1448,13 @@
         "          if atual == None:\n",
         "            anterior.esq = novo\n",
         "            return\n",
-        "\t\t\t\n",
+        "\n",
         "        else:  # ir para direita\n",
         "          atual = atual.dir\n",
         "          if atual == None:\n",
         "            anterior.dir = novo\n",
         "            return\n",
-        "\t\t\n",
+        "\n",
         "  def bfs(self, node,n):\n",
         "    if not node:\n",
         "      return\n",
@@ -1468,12 +1468,12 @@
         "        print(node.dado,end=\" \")\n",
         "      else:\n",
         "        print(node.dado,end=\"\")\n",
-        "        \n",
+        "\n",
         "      if node.esq:\n",
         "        queue.append(node.esq)\n",
         "      if node.dir:\n",
         "        queue.append(node.dir)\n",
-        "    \n",
+        "\n",
         "  def inOrder(self, atual):\n",
         "    if atual != None:\n",
         "      self.inOrder(atual.esq)\n",
@@ -1517,7 +1517,7 @@
         "          return 1\n",
         "      return self.folhas(atual.esq) + self.folhas(atual.dir)\n",
         "\n",
-        "  \n",
+        "\n",
         "  def contarNos(self, atual):\n",
         "    if atual == None:\n",
         "          return 0\n",
@@ -1557,7 +1557,7 @@
       "metadata": {
         "id": "m4yTqSn3Vklu"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1621,7 +1621,7 @@
         "id": "dwgTUpNHYB33",
         "outputId": "c563c621-8876-4277-f86e-507aa6d10919"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1680,7 +1680,7 @@
         "id": "ke9DfIBNpjK6",
         "outputId": "5a0134f4-71d0-4d2e-d9b8-21f3fdadca8e"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1775,12 +1775,12 @@
         "      #print(\"tamanho\",len(array))\n",
         "      alturas.append(arv.altura_max(arv.root))\n",
         "      t = 0.0\n",
-        "      \n",
+        "\n",
         "      #print(\"chaves aleeatórias = \",chave_aleat)\n",
         "      tempo_total = 0.0\n",
         "      Taux = []\n",
         "      nc = []\n",
-        "      \n",
+        "\n",
         "      total_num_comp = 0.0\n",
         "      for j in range(100):\n",
         "          t = timeit.timeit(lambda: arv.busca(chave_aleat[j]), number=1)\n",
@@ -1796,7 +1796,7 @@
         "      tempo_casoaleat.append(round((tempo_total/100),5))\n",
         "      num_comp_casos_aleat.append(int(total_num_comp/100))\n",
         "      total_num_comp = 0\n",
-        "      \n",
+        "\n",
         "      #print(\"tempo=\",t)\n",
         "\n",
         "print(\"tempos medios em 100 casos aleatórios=\\n \",tempo_casoaleat)\n",
@@ -1813,7 +1813,7 @@
         "id": "jUO8gFQWXxSU",
         "outputId": "d46ea127-52c0-444e-df73-be06ea4ff281"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1877,7 +1877,7 @@
         "id": "P4Y1IogaeSP8",
         "outputId": "021821f6-bb9c-4c06-ac6e-9e3e221b805f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
